# scop

./: CMakeLists.txt  Makefile  config.cfg  main.cpp
include/: BuffersCollection.hpp  Camera.hpp  Debug3DLine.hpp  EventChannel.hpp  EventLoop.hpp  FPSCounter.hpp  Subspace.hpp  TextureParser.hpp  Vertex.hpp  cfg_parser.hpp  math.hpp  objLoader.hpp  stb_image.h
include/Graphic/: Line.hpp  LineStrip.hpp  Object3D.hpp  Orbit.hpp  Shader.hpp  Texture.hpp  TextureParameters.hpp  TexturesPack.hpp
include/Graphic/RenderUtils/: WireBBoxManager.hpp
include/IO/: KeysControls.hpp  MouseEvents.hpp  ObjectsControls.hpp  ShadersControls.hpp  UI.hpp  Window.hpp  WindowSettings.hpp  mouseHandler.hpp
include/ModuleDispatcher/: EventChannel.hpp  EventLoop.hpp  IModule.hpp  ModuleDispatcher.hpp
include/Scene/: Scene.hpp
include/TransfromBehaviour/: TransfromBehaviour.hpp
modules/GLWindow/: GLWindow.cpp  GLWindow.hpp
modules/Resources/: DescriptionObject3D.hpp  GeometryKeeper.cpp  GeometryKeeper.hpp  ResourcesModule.cpp  ResourcesModule.hpp  TextureKeeper.cpp  TexturesKeeper.hpp
resources/: Untitled.mtl  cube_split.mtl
resources/shaders/: boundbox.fs  boundbox.vs  boundbox_vs.glsl  fs.fs  fs.glsl  line.fs  line.vs  line_vs.glsl  vs.glsl  vs.vs
src/: Camera.cpp  KeysControls.cpp  Object3D.cpp  Orbit.cpp  Shader.cpp  Texture.cpp  TextureParser.cpp  Window.cpp  math_test.cpp  mouseHandler.cpp  objloader_test.cpp
src/IO/: ObjectsControls.cpp  ShadersControls.cpp
